--- a/src/jupyter.ipynb
+++ b/src/jupyter.ipynb
@@ -35,23 +35,31 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 41,
+            "execution_count": 1,
             "metadata": {},
             "outputs": [
                 {
-                    "output_type": "stream",
-                    "name": "stdout",
-                    "text": [
-                        "[1.   0.99 1.01 1.02 1.02 0.96 5.  ]\n"
-                    ]
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "''"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 1
                 }
             ],
             "source": [
-                "import numpy as np\n",
-                "x=np.array([1,0.99,1.01,1.02,1.02,0.96])\n",
-                "x=np.append(x,5)\n",
-                "print(x)\n",
-                "# print(x,np.mean(x),np.amax(x)-np.mean(x),np.mean(x)-np.amin(x),max(np.amax(x)-np.mean(x),np.mean(x)-np.amin(x))/np.mean(x))"
+                "import readline\n",
+                "\n",
+                "def rlinput(prompt, prefill=''):\n",
+                "   readline.set_startup_hook(lambda: readline.insert_text(prefill))\n",
+                "   try:\n",
+                "      return input(prompt)  # or raw_input in Python 2\n",
+                "   finally:\n",
+                "      readline.set_startup_hook()\n",
+                "\n",
+                "rlinput('Please enter times:','100')"
             ]
         },
         {
