Add thread for create report

--- a/src/jupyter.ipynb
+++ b/src/jupyter.ipynb
@@ -2,27 +2,43 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 10,
             "source": [
                 "import os\n",
                 "print(os.getcwd())"
             ],
-            "outputs": [],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "/home/ethan/Desktop/projects/circuit/src\n"
+                    ]
+                }
+            ],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 11,
             "source": [
                 "x={'name1':'zhj','name2':'zyc'}\n",
                 "print(x,type(x))"
             ],
-            "outputs": [],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "{'name1': 'zhj', 'name2': 'zyc'} <class 'dict'>\n"
+                    ]
+                }
+            ],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 12,
             "source": [
                 "import pandas as pd\n",
                 "s1=pd.DataFrame(columns=('','Left','Right'))\n",
@@ -30,28 +46,44 @@
                 "print(s1)\n",
                 "# print(s1.to_html)"
             ],
-            "outputs": [],
-            "metadata": {}
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 41,
-            "metadata": {},
             "outputs": [
                 {
                     "output_type": "stream",
                     "name": "stdout",
                     "text": [
-                        "[1.   0.99 1.01 1.02 1.02 0.96 5.  ]\n"
+                        "     Left Right\n0  1    2     3\n"
                     ]
                 }
             ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 13,
+            "metadata": {},
+            "outputs": [
+                {
+                    "output_type": "execute_result",
+                    "data": {
+                        "text/plain": [
+                            "''"
+                        ]
+                    },
+                    "metadata": {},
+                    "execution_count": 13
+                }
+            ],
             "source": [
-                "import numpy as np\n",
-                "x=np.array([1,0.99,1.01,1.02,1.02,0.96])\n",
-                "x=np.append(x,5)\n",
-                "print(x)\n",
-                "# print(x,np.mean(x),np.amax(x)-np.mean(x),np.mean(x)-np.amin(x),max(np.amax(x)-np.mean(x),np.mean(x)-np.amin(x))/np.mean(x))"
+                "import readline\n",
+                "\n",
+                "def rlinput(prompt, prefill=''):\n",
+                "   readline.set_startup_hook(lambda: readline.insert_text(prefill))\n",
+                "   try:\n",
+                "      return input(prompt)  # or raw_input in Python 2\n",
+                "   finally:\n",
+                "      readline.set_startup_hook()\n",
+                "\n",
+                "rlinput('Please enter times:','100')"
             ]
         },
         {
@@ -64,20 +96,77 @@
             ],
             "cell_type": "markdown",
             "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 18,
+            "metadata": {},
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "runningc1 0\n",
+                        "runningc1 1\n",
+                        "runningc1 2\n",
+                        "runningc1 3\n",
+                        "thread finished...exiting\n",
+                        "runningc1 4\n"
+                    ]
+                }
+            ],
+            "source": [
+                "import threading\n",
+                "from time import sleep\n",
+                "\n",
+                "\n",
+                "\n",
+                "class C:\n",
+                "    def __init__(self, name, c, tol=0.05):\n",
+                "        self.name = name\n",
+                "        self.c = c\n",
+                "        self.tol = tol\n",
+                "        self.capacitance = []\n",
+                "\n",
+                "    def createthread(self):\n",
+                "        thread = threading.Thread(target = self.threaded_function, args = ())\n",
+                "        thread.start()\n",
+                "\n",
+                "    def threaded_function(self):\n",
+                "        for i in range(5):\n",
+                "            print(\"running\"+self.name,i)\n",
+                "            sleep(1)\n",
+                "\n",
+                "\n",
+                "if __name__ == \"__main__\":\n",
+                "    cap=C('c1',1.5,0.025)\n",
+                "    \n",
+                "    cap.createthread()\n",
+                "    # cap.threaded_function()\n",
+                "    sleep(4)\n",
+                "    print(\"thread finished...exiting\")"
+            ]
+        },
+        {
+            "cell_type": "code",
+            "execution_count": null,
+            "metadata": {},
+            "outputs": [],
+            "source": []
         }
     ],
     "metadata": {
         "orig_nbformat": 4,
         "language_info": {
             "name": "python",
-            "version": "3.8.10"
+            "version": "3.9.4"
         },
         "kernelspec": {
             "name": "python3",
-            "display_name": "Python 3.8.10 64-bit ('base': conda)"
+            "display_name": "Python 3.9.5 64-bit ('py39': conda)"
         },
         "interpreter": {
-            "hash": "fc5b00bee59e553d508db9922ccda4ed2426092ffdded382ff87e02c7f5799df"
+            "hash": "8341c9884ae3f88d210e5c9662e15c9fa95fe02a5a82cfc8e4e1214f0adf17be"
         }
     },
     "nbformat": 4,
