Before try PySide2

--- a/src/jupyter.ipynb
+++ b/src/jupyter.ipynb
@@ -149,6 +149,28 @@
         },
         {
             "cell_type": "code",
+            "execution_count": 5,
+            "metadata": {},
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "<class 'tuple'>\n[1234, '432tew', 'fvfa.txt'] <class 'list'>\n"
+                    ]
+                }
+            ],
+            "source": [
+                "def rm(*args):\n",
+                "    print(type(args))\n",
+                "    for item in args:\n",
+                "        print(item,type(item))\n",
+                "\n",
+                "rm([1234,'432tew','fvfa.txt'])"
+            ]
+        },
+        {
+            "cell_type": "code",
             "execution_count": null,
             "metadata": {},
             "outputs": [],
