--- a/src/jupyter.ipynb
+++ b/src/jupyter.ipynb
@@ -24,11 +24,29 @@
             "cell_type": "code",
             "execution_count": null,
             "source": [
-                "import pandas as pd\n",
-                "s1=pd.DataFrame(columns=('','Left','Right'))\n",
-                "s1.loc[0]=[1,2,3]\n",
-                "print(s1)\n",
-                "# print(s1.to_html)"
+                "class Rectangle(object):\n",
+                "  @property\n",
+                "  def width(self):\n",
+                "    # 变量名不与方法名重复，改为true_width，下同\n",
+                "    return self.true_width\n",
+                "  @width.setter\n",
+                "  def width(self, input_width):\n",
+                "    self.true_width = input_width\n",
+                "  @property\n",
+                "  def height(self):\n",
+                "    return self.true_height\n",
+                "  @height.setter\n",
+                "  #与property定义的方法名要一致\n",
+                "  def height(self, input_height):\n",
+                "    self.true_height = input_height\n",
+                "s = Rectangle()\n",
+                "# 与方法名一致\n",
+                "s.width = 1024\n",
+                "s.height = 768\n",
+                "print(s.width,s.height)\n",
+                "s.width = 720\n",
+                "s.height = 480\n",
+                "print(s.width,s.height)"
             ],
             "outputs": [],
             "metadata": {}
@@ -120,46 +138,29 @@
             "metadata": {},
             "outputs": [],
             "source": [
-                "def m(x,y=[]):\n",
-                "    if y:\n",
-                "        return y\n",
-                "    else:\n",
-                "        return x\n",
+                "def square(x:int) -> int:\n",
+                "    print(x,type(x))\n",
+                "    return x**2\n",
                 "\n",
-                "x,y,z=m(5,[2,3,4])\n",
-                "print(x,y,z)\n",
-                "a,b,c=[1,2,3]\n",
-                "print(a,b,c)"
+                "print(square(5.5))"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": 57,
+            "execution_count": 3,
             "metadata": {},
             "outputs": [
                 {
                     "output_type": "stream",
                     "name": "stdout",
                     "text": [
-                        "Module: numpy can be imported\n"
-                    ]
-                },
-                {
-                    "output_type": "error",
-                    "ename": "AttributeError",
-                    "evalue": "module 'numpy' has no attribute 'r'",
-                    "traceback": [
-                        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-                        "\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-                        "\u001b[0;32m/tmp/ipykernel_104242/1473590920.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m     35\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     36\u001b[0m \u001b[0;31m# from numpy import random,linspace\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 37\u001b[0;31m \u001b[0mrandom\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mimport_module\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcheck_module\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'numpy'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m'random'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     38\u001b[0m \u001b[0;31m# sci=import_module_from_spec(check_module('numpy.lib.scimath'))\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     39\u001b[0m \u001b[0;31m# random,linspace,sqrt=import_module_from_spec(check_module('numpy'),['random','linspace','sqrt'])\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-                        "\u001b[0;32m/tmp/ipykernel_104242/1473590920.py\u001b[0m in \u001b[0;36mimport_module\u001b[0;34m(module_name, name)\u001b[0m\n\u001b[1;32m     24\u001b[0m         \u001b[0mi\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     25\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0mitem\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mname\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 26\u001b[0;31m             \u001b[0msub\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mgetattr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mmodule\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     27\u001b[0m             \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Import '\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mmodule_name\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0;34m'.'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mitem\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     28\u001b[0m             \u001b[0mi\u001b[0m\u001b[0;34m+=\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-                        "\u001b[0;32m~/.local/lib/python3.9/site-packages/numpy/__init__.py\u001b[0m in \u001b[0;36m__getattr__\u001b[0;34m(attr)\u001b[0m\n\u001b[1;32m    311\u001b[0m                 \u001b[0;32mreturn\u001b[0m \u001b[0mTester\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    312\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 313\u001b[0;31m             raise AttributeError(\"module {!r} has no attribute \"\n\u001b[0m\u001b[1;32m    314\u001b[0m                                  \"{!r}\".format(__name__, attr))\n\u001b[1;32m    315\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-                        "\u001b[0;31mAttributeError\u001b[0m: module 'numpy' has no attribute 'r'"
+                        "Module: weasyprint can be imported\nImport weasyprint.HTML\n0.0002213870002378826 <class 'weasyprint.HTML'>\nexist\n"
                     ]
                 }
             ],
             "source": [
                 "import importlib\n",
+                "from timeit import default_timer as timer\n",
                 "\n",
                 "def check_module(module_name):\n",
                 "    \"\"\"\n",
@@ -174,32 +175,43 @@
                 "        return module_name\n",
                 "\n",
                 "\n",
-                "def import_module(module_name,name=[]):\n",
+                "def import_module(module_name,name=None):\n",
                 "    \"\"\"\n",
                 "    Import the module via the passed in module specification\n",
                 "    Returns the newly imported module\n",
                 "    \"\"\"\n",
-                "    module = importlib.import_module(module_name)\n",
-                "    if name:\n",
-                "        sub=[None]*len(name)\n",
-                "        i=0\n",
-                "        for item in name:\n",
-                "            sub[i]=getattr(module,item)\n",
-                "            print('Import '+module_name+'.'+item)\n",
-                "            i+=1\n",
-                "        if i==1:\n",
-                "            return sub[0]\n",
-                "        else:\n",
-                "            return sub\n",
+                "    if module_name==None:\n",
+                "        return\n",
                 "    else:\n",
+                "        module = importlib.import_module(module_name)\n",
+                "    \n",
+                "    if name==None:\n",
                 "        return module\n",
+                "    elif isinstance(name,str):\n",
+                "        print('Import '+module_name+'.'+name)\n",
+                "        return getattr(module,name)\n",
+                "    elif isinstance(name,list):\n",
+                "        length=len(name)\n",
+                "        if length==1:\n",
+                "            print('Import '+module_name+'.'+name[0])\n",
+                "            return getattr(module,name[0])\n",
+                "        elif length>1:\n",
+                "            sub=[None]*length\n",
+                "            for item,i in zip(name,range(length)):\n",
+                "                sub[i]=getattr(module,item)\n",
+                "                print('Import '+module_name+'.'+item)\n",
+                "            return sub\n",
+                "        else:\n",
+                "            raise BaseException(\"Empty list\")\n",
+                "    else:\n",
+                "        raise TypeError(\"Unsupported type {} of \"+name)\n",
                 "\n",
-                "# from numpy import random,linspace\n",
-                "random=import_module(check_module('numpy'),['random'])\n",
+                "\n",
+                "HTML=import_module(check_module('weasyprint'),'HTML')\n",
                 "# sci=import_module_from_spec(check_module('numpy.lib.scimath'))\n",
                 "# random,linspace,sqrt=import_module_from_spec(check_module('numpy'),['random','linspace','sqrt'])\n",
                 "\n",
-                "print(random.rand(5))\n",
+                "# print(np.random.rand(5))\n",
                 "# print(linspace(1,5,4))"
             ]
         },
