Improve connect function in pyqt5

--- a/src/jupyter.ipynb
+++ b/src/jupyter.ipynb
@@ -2,22 +2,72 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 12,
             "source": [
-                "import os\n",
-                "print(os.getcwd())"
+                "try:\n",
+                "    1==2\n",
+                "except:\n",
+                "    pass\n",
+                "finally:\n",
+                "    print('enter')"
             ],
-            "outputs": [],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "enter\n"
+                    ]
+                }
+            ],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 11,
             "source": [
-                "x={'name1':'zhj','name2':'zyc'}\n",
-                "print(x,type(x))"
+                "class C:\n",
+                "    def __init__(self, name, c, tol=0.05):\n",
+                "        self.name = name\n",
+                "        self.c = c\n",
+                "        self.tol = tol\n",
+                "        self.capacitance = []\n",
+                "\n",
+                "    def copy(self):\n",
+                "        self.r2=self.r\n",
+                "        self.r2.r=50\n",
+                "        print(self.r2.r,self.r.r)\n",
+                "\n",
+                "    def create(self):\n",
+                "        self.r=R('r1',100)\n",
+                "\n",
+                "class R:\n",
+                "    def __init__(self, name, r, tol=0.01):\n",
+                "        self.name = name\n",
+                "        self.r = r\n",
+                "        self.tol = tol\n",
+                "        self.resistance = []\n",
+                "\n",
+                "\n",
+                "res=R('r2',43)\n",
+                "print(res)\n",
+                "cap=C(res,0.01)\n",
+                "cap.create()\n",
+                "cap.copy()\n",
+                "print('name:',cap.name.name)\n",
+                "res=R('r3',43)\n",
+                "print(res)\n",
+                "print('name:',cap.name.name)"
             ],
-            "outputs": [],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "<__main__.R object at 0x7f26fba759d0>\n50 50\nname: r2\n<__main__.R object at 0x7f26fb7bd0a0>\nname: r2\n"
+                    ]
+                }
+            ],
             "metadata": {}
         },
         {
@@ -120,29 +170,72 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 3,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "1.5 MHz 1.5M\n"
+                    ]
+                }
+            ],
             "source": [
-                "def rm(*args):\n",
-                "    print(type(args))\n",
-                "    for item in args:\n",
-                "        print(item,type(item))\n",
+                "from quantiphy import Quantity,UnitConversion\n",
                 "\n",
-                "rm([1234,'432tew','fvfa.txt'])"
+                "# start=input('Please enter the start frequency: ')\n",
+                "# while True:\n",
+                "#     try:\n",
+                "#         f=Quantity(start,units='Hz')\n",
+                "#     except:\n",
+                "#         start=input('Error! Please enter a valid frequency: ')\n",
+                "#     else:\n",
+                "#         print(f,f.real,f.format('Q'))\n",
+                "#         print(f.render())\n",
+                "#         break\n",
+                "\n",
+                "x='1.5MHz'\n",
+                "f=Quantity(x,units='Hz')\n",
+                "print(f,f.render(show_units=False))"
             ]
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 2,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "memory use: 61.7734375\nmemory use: 99.7578125\nmemory use: 61.8359375\nmemory use: 61.8359375\n"
+                    ]
+                }
+            ],
             "source": [
-                "def square(x:int) -> int:\n",
-                "    print(x,type(x))\n",
-                "    return x**2\n",
+                "import os\n",
+                "import psutil\n",
+                "import numpy as np\n",
                 "\n",
-                "print(square(5.5))"
+                "\n",
+                "python_process = psutil.Process(os.getpid())\n",
+                "memoryUse = python_process.memory_info()[0]/2.**20  # memory use in GB...I think\n",
+                "print('memory use:', memoryUse)\n",
+                "\n",
+                "x = np.random.rand(5000000)\n",
+                "\n",
+                "memoryUse = python_process.memory_info()[0]/2.**20\n",
+                "print('memory use:', memoryUse)\n",
+                "\n",
+                "del x\n",
+                "\n",
+                "memoryUse = python_process.memory_info()[0]/2.**20\n",
+                "print('memory use:', memoryUse)\n",
+                "\n",
+                "del memoryUse\n",
+                "\n",
+                "print('memory use:', python_process.memory_info()[0]/2.**20)"
             ]
         },
         {
@@ -217,12 +310,24 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 13,
             "metadata": {},
-            "outputs": [],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "('John', 'Jenny')\n('Charles', 'Christy')\n('Mike', 'Monica')\n"
+                    ]
+                }
+            ],
             "source": [
-                "from numpy.lib.scimath import sqrt\n",
-                "print(sqrt(5))"
+                "a = (\"John\", \"Charles\", \"Mike\")\n",
+                "b = (\"Jenny\", \"Christy\", \"Monica\",'afsv')\n",
+                "\n",
+                "x=zip(a, b)\n",
+                "for item in x:\n",
+                "    print(item)"
             ]
         },
         {
