--- a/src/jupyter.ipynb
+++ b/src/jupyter.ipynb
@@ -2,21 +2,19 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": 12,
+            "execution_count": 23,
             "source": [
-                "try:\n",
-                "    1==2\n",
-                "except:\n",
-                "    pass\n",
-                "finally:\n",
-                "    print('enter')"
+                "import re\n",
+                "\n",
+                "x=re.compile(r'[^\\d\\.\\npnuμmkKMGT ]+').search('123\\ndf3').group()\n",
+                "print(x)"
             ],
             "outputs": [
                 {
                     "output_type": "stream",
                     "name": "stdout",
                     "text": [
-                        "enter\n"
+                        "df\n"
                     ]
                 }
             ],
@@ -64,7 +62,11 @@
                     "output_type": "stream",
                     "name": "stdout",
                     "text": [
-                        "<__main__.R object at 0x7f26fba759d0>\n50 50\nname: r2\n<__main__.R object at 0x7f26fb7bd0a0>\nname: r2\n"
+                        "<__main__.R object at 0x7f26fba759d0>\n",
+                        "50 50\n",
+                        "name: r2\n",
+                        "<__main__.R object at 0x7f26fb7bd0a0>\n",
+                        "name: r2\n"
                     ]
                 }
             ],
@@ -104,8 +106,6 @@
         {
             "cell_type": "code",
             "execution_count": null,
-            "metadata": {},
-            "outputs": [],
             "source": [
                 "import readline\n",
                 "\n",
@@ -117,9 +117,12 @@
                 "      readline.set_startup_hook()\n",
                 "\n",
                 "rlinput('Please enter times:','100')"
-            ]
+            ],
+            "outputs": [],
+            "metadata": {}
         },
         {
+            "cell_type": "markdown",
             "source": [
                 "django add picture\n",
                 "```html\n",
@@ -127,14 +130,11 @@
                 "  <img src=\"{% static \"DSC08572.jpg\" %}\" alt=\"zhj\" width=\"400\">\n",
                 "  ```"
             ],
-            "cell_type": "markdown",
             "metadata": {}
         },
         {
             "cell_type": "code",
             "execution_count": null,
-            "metadata": {},
-            "outputs": [],
             "source": [
                 "import threading\n",
                 "from time import sleep\n",
@@ -166,21 +166,13 @@
                 "    # cap.threaded_function()\n",
                 "    sleep(4)\n",
                 "    print(\"thread finished...exiting\")"
-            ]
+            ],
+            "outputs": [],
+            "metadata": {}
         },
         {
             "cell_type": "code",
             "execution_count": 4,
-            "metadata": {},
-            "outputs": [
-                {
-                    "output_type": "stream",
-                    "name": "stdout",
-                    "text": [
-                        "1.5 nΩ 1.5e-09\n"
-                    ]
-                }
-            ],
             "source": [
                 "from quantiphy import Quantity,UnitConversion\n",
                 "\n",
@@ -198,21 +190,21 @@
                 "x='1.5n'\n",
                 "f=Quantity(x,units='Ω')\n",
                 "print(f,Quantity(x,units='Ω').real)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 2,
-            "metadata": {},
+            ],
             "outputs": [
                 {
                     "output_type": "stream",
                     "name": "stdout",
                     "text": [
-                        "memory use: 61.7734375\nmemory use: 99.7578125\nmemory use: 61.8359375\nmemory use: 61.8359375\n"
+                        "1.5 nΩ 1.5e-09\n"
                     ]
                 }
             ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 2,
             "source": [
                 "import os\n",
                 "import psutil\n",
@@ -236,21 +228,24 @@
                 "del memoryUse\n",
                 "\n",
                 "print('memory use:', python_process.memory_info()[0]/2.**20)"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 3,
-            "metadata": {},
+            ],
             "outputs": [
                 {
                     "output_type": "stream",
                     "name": "stdout",
                     "text": [
-                        "Module: weasyprint can be imported\nImport weasyprint.HTML\n0.0002213870002378826 <class 'weasyprint.HTML'>\nexist\n"
+                        "memory use: 61.7734375\n",
+                        "memory use: 99.7578125\n",
+                        "memory use: 61.8359375\n",
+                        "memory use: 61.8359375\n"
                     ]
                 }
             ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 3,
             "source": [
                 "import importlib\n",
                 "from timeit import default_timer as timer\n",
@@ -306,21 +301,24 @@
                 "\n",
                 "# print(np.random.rand(5))\n",
                 "# print(linspace(1,5,4))"
-            ]
-        },
-        {
-            "cell_type": "code",
-            "execution_count": 13,
-            "metadata": {},
+            ],
             "outputs": [
                 {
                     "output_type": "stream",
                     "name": "stdout",
                     "text": [
-                        "('John', 'Jenny')\n('Charles', 'Christy')\n('Mike', 'Monica')\n"
+                        "Module: weasyprint can be imported\n",
+                        "Import weasyprint.HTML\n",
+                        "0.0002213870002378826 <class 'weasyprint.HTML'>\n",
+                        "exist\n"
                     ]
                 }
             ],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 13,
             "source": [
                 "a = (\"John\", \"Charles\", \"Mike\")\n",
                 "b = (\"Jenny\", \"Christy\", \"Monica\",'afsv')\n",
@@ -328,12 +326,33 @@
                 "x=zip(a, b)\n",
                 "for item in x:\n",
                 "    print(item)"
-            ]
+            ],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "('John', 'Jenny')\n",
+                        "('Charles', 'Christy')\n",
+                        "('Mike', 'Monica')\n"
+                    ]
+                }
+            ],
+            "metadata": {}
         },
         {
             "cell_type": "code",
             "execution_count": 19,
-            "metadata": {},
+            "source": [
+                "def setunit(value, base, level):\n",
+                "    for i in range(level):\n",
+                "        if value < 10**(base + 3 * i+3):\n",
+                "            return value / 10**(base + 3 * i), i\n",
+                "\n",
+                "    return value/10**(base+3*i), i\n",
+                "\n",
+                "setunit(1e6,-6,2)"
+            ],
             "outputs": [
                 {
                     "output_type": "execute_result",
@@ -346,30 +365,29 @@
                     "execution_count": 19
                 }
             ],
-            "source": [
-                "def setunit(value, base, level):\n",
-                "    for i in range(level):\n",
-                "        if value < 10**(base + 3 * i+3):\n",
-                "            return value / 10**(base + 3 * i), i\n",
-                "\n",
-                "    return value/10**(base+3*i), i\n",
-                "\n",
-                "setunit(1e6,-6,2)"
-            ]
+            "metadata": {}
         },
         {
             "cell_type": "code",
             "execution_count": null,
-            "metadata": {},
+            "source": [],
             "outputs": [],
-            "source": []
+            "metadata": {}
         }
     ],
     "metadata": {
         "orig_nbformat": 4,
         "language_info": {
             "name": "python",
-            "version": "3.9.6"
+            "version": "3.9.6",
+            "mimetype": "text/x-python",
+            "codemirror_mode": {
+                "name": "ipython",
+                "version": 3
+            },
+            "pygments_lexer": "ipython3",
+            "nbconvert_exporter": "python",
+            "file_extension": ".py"
         },
         "kernelspec": {
             "name": "python3",
