Improve alter opamp

--- a/src/jupyter.ipynb
+++ b/src/jupyter.ipynb
@@ -2,19 +2,30 @@
     "cells": [
         {
             "cell_type": "code",
-            "execution_count": 23,
+            "execution_count": null,
             "source": [
                 "import re\n",
                 "\n",
                 "x=re.compile(r'[^\\d\\.\\npnuμmkKMGT ]+').search('123\\ndf3').group()\n",
                 "print(x)"
             ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 13,
+            "source": [
+                "x='XU1 N004 N001 N002 0 out MCP6271 * qsfa'\n",
+                "y=x.split('*',1)[0].split()[-1]\n",
+                "print(y)"
+            ],
             "outputs": [
                 {
                     "output_type": "stream",
                     "name": "stdout",
                     "text": [
-                        "df\n"
+                        "MCP6271\n"
                     ]
                 }
             ],
@@ -22,7 +33,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 11,
+            "execution_count": null,
             "source": [
                 "class C:\n",
                 "    def __init__(self, name, c, tol=0.05):\n",
@@ -57,19 +68,7 @@
                 "print(res)\n",
                 "print('name:',cap.name.name)"
             ],
-            "outputs": [
-                {
-                    "output_type": "stream",
-                    "name": "stdout",
-                    "text": [
-                        "<__main__.R object at 0x7f26fba759d0>\n",
-                        "50 50\n",
-                        "name: r2\n",
-                        "<__main__.R object at 0x7f26fb7bd0a0>\n",
-                        "name: r2\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "metadata": {}
         },
         {
@@ -172,7 +171,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 4,
+            "execution_count": null,
             "source": [
                 "from quantiphy import Quantity,UnitConversion\n",
                 "\n",
@@ -191,20 +190,12 @@
                 "f=Quantity(x,units='Ω')\n",
                 "print(f,Quantity(x,units='Ω').real)"
             ],
-            "outputs": [
-                {
-                    "output_type": "stream",
-                    "name": "stdout",
-                    "text": [
-                        "1.5 nΩ 1.5e-09\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": null,
             "source": [
                 "import os\n",
                 "import psutil\n",
@@ -229,23 +220,12 @@
                 "\n",
                 "print('memory use:', python_process.memory_info()[0]/2.**20)"
             ],
-            "outputs": [
-                {
-                    "output_type": "stream",
-                    "name": "stdout",
-                    "text": [
-                        "memory use: 61.7734375\n",
-                        "memory use: 99.7578125\n",
-                        "memory use: 61.8359375\n",
-                        "memory use: 61.8359375\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 3,
+            "execution_count": null,
             "source": [
                 "import importlib\n",
                 "from timeit import default_timer as timer\n",
@@ -302,23 +282,12 @@
                 "# print(np.random.rand(5))\n",
                 "# print(linspace(1,5,4))"
             ],
-            "outputs": [
-                {
-                    "output_type": "stream",
-                    "name": "stdout",
-                    "text": [
-                        "Module: weasyprint can be imported\n",
-                        "Import weasyprint.HTML\n",
-                        "0.0002213870002378826 <class 'weasyprint.HTML'>\n",
-                        "exist\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 13,
+            "execution_count": null,
             "source": [
                 "a = (\"John\", \"Charles\", \"Mike\")\n",
                 "b = (\"Jenny\", \"Christy\", \"Monica\",'afsv')\n",
@@ -327,22 +296,12 @@
                 "for item in x:\n",
                 "    print(item)"
             ],
-            "outputs": [
-                {
-                    "output_type": "stream",
-                    "name": "stdout",
-                    "text": [
-                        "('John', 'Jenny')\n",
-                        "('Charles', 'Christy')\n",
-                        "('Mike', 'Monica')\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 19,
+            "execution_count": null,
             "source": [
                 "def setunit(value, base, level):\n",
                 "    for i in range(level):\n",
@@ -353,18 +312,7 @@
                 "\n",
                 "setunit(1e6,-6,2)"
             ],
-            "outputs": [
-                {
-                    "output_type": "execute_result",
-                    "data": {
-                        "text/plain": [
-                            "(1000000000.0, 1)"
-                        ]
-                    },
-                    "metadata": {},
-                    "execution_count": 19
-                }
-            ],
+            "outputs": [],
             "metadata": {}
         },
         {
@@ -394,7 +342,7 @@
             "display_name": "Python 3.9.6 64-bit ('venv': venv)"
         },
         "interpreter": {
-            "hash": "67ef6772c86da8ef658879aa388a1de651c83b6815030446bc445c101b39a03e"
+            "hash": "bcca279a21f4a4c5378044df7c921d39c294123c6981b1dc8d0e6e875af00827"
         }
     },
     "nbformat": 4,
