Improve alter opm

--- a/src/jupyter.ipynb
+++ b/src/jupyter.ipynb
@@ -14,18 +14,35 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 13,
+            "execution_count": null,
             "source": [
-                "x='XU1 N004 N001 N002 0 out MCP6271 * qsfa'\n",
-                "y=x.split('*',1)[0].split()[-1]\n",
-                "print(y)"
+                "import numpy as np\n",
+                "\n",
+                "x=np.random.randint(0,2,10)\n",
+                "print(x,np.where(x))"
+            ],
+            "outputs": [],
+            "metadata": {}
+        },
+        {
+            "cell_type": "code",
+            "execution_count": 28,
+            "source": [
+                "import numpy as np\n",
+                "\n",
+                "x=np.arange(10)\n",
+                "y=np.array([0,0,0,1,0,0,0,0,0,0])\n",
+                "z=np.where(y==1)[0]\n",
+                "print(z)\n",
+                "print(np.split(x,z))"
             ],
             "outputs": [
                 {
                     "output_type": "stream",
                     "name": "stdout",
                     "text": [
-                        "MCP6271\n"
+                        "[3]\n",
+                        "[array([0, 1, 2]), array([3, 4, 5, 6, 7, 8, 9])]\n"
                     ]
                 }
             ],
