Improve opamp and start cmrr

--- a/src/jupyter.ipynb
+++ b/src/jupyter.ipynb
@@ -14,19 +14,27 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 2,
             "source": [
                 "import numpy as np\n",
                 "\n",
                 "x=np.random.randint(0,2,10)\n",
-                "print(x,np.where(x))"
+                "print(x,np.where(x)[0],np.diff(x))"
             ],
-            "outputs": [],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "[1 0 0 0 1 1 0 0 1 1] [0 4 5 8 9] [-1  0  0  1  0 -1  0  1  0]\n"
+                    ]
+                }
+            ],
             "metadata": {}
         },
         {
             "cell_type": "code",
-            "execution_count": 28,
+            "execution_count": 3,
             "source": [
                 "import numpy as np\n",
                 "\n",
@@ -188,7 +196,7 @@
         },
         {
             "cell_type": "code",
-            "execution_count": null,
+            "execution_count": 9,
             "source": [
                 "from quantiphy import Quantity,UnitConversion\n",
                 "\n",
@@ -203,11 +211,19 @@
                 "#         print(f.render())\n",
                 "#         break\n",
                 "\n",
-                "x='1.5n'\n",
-                "f=Quantity(x,units='Ω')\n",
-                "print(f,Quantity(x,units='Ω').real)"
+                "x='12'\n",
+                "f=Quantity(x,units='s')\n",
+                "print(f,f.render(form='eng'))"
             ],
-            "outputs": [],
+            "outputs": [
+                {
+                    "output_type": "stream",
+                    "name": "stdout",
+                    "text": [
+                        "12 s 12 s\n"
+                    ]
+                }
+            ],
             "metadata": {}
         },
         {
