--- a/src/jupyter.ipynb
+++ b/src/jupyter.ipynb
@@ -14,22 +14,15 @@
         },
         {
             "cell_type": "code",
-            "execution_count": 2,
+            "execution_count": 21,
             "source": [
-                "import numpy as np\n",
-                "\n",
-                "x=np.random.randint(0,2,10)\n",
-                "print(x,np.where(x)[0],np.diff(x))"
+                "import os\n",
+                "a=5\n",
+                "with open('cmrr.net','r+b') as f:\n",
+                "    f.seek(-5,2)\n",
+                "    f.write(bytes(f'V3ea n23r {a} das AC 1\\n.end'.encode('utf-8')))"
             ],
-            "outputs": [
-                {
-                    "output_type": "stream",
-                    "name": "stdout",
-                    "text": [
-                        "[1 0 0 0 1 1 0 0 1 1] [0 4 5 8 9] [-1  0  0  1  0 -1  0  1  0]\n"
-                    ]
-                }
-            ],
+            "outputs": [],
             "metadata": {}
         },
         {
@@ -360,7 +353,7 @@
         "orig_nbformat": 4,
         "language_info": {
             "name": "python",
-            "version": "3.9.6",
+            "version": "3.9.5",
             "mimetype": "text/x-python",
             "codemirror_mode": {
                 "name": "ipython",
@@ -372,7 +365,7 @@
         },
         "kernelspec": {
             "name": "python3",
-            "display_name": "Python 3.9.6 64-bit ('venv': venv)"
+            "display_name": "Python 3.9.5 64-bit ('venv': venv)"
         },
         "interpreter": {
             "hash": "bcca279a21f4a4c5378044df7c921d39c294123c6981b1dc8d0e6e875af00827"
